--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt-BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt-BR.json
@@ -776,7 +776,7 @@
     "ButtonUnlockWithSupporter": "Entre com a Conta de Colaborador do Emby",
     "MessagePleaseSignInLocalNetwork": "Antes de continuar, por favor assegure-se que esteja conectado \u00e0 sua rede local usando Wifi ou uma conex\u00e3o de rede.",
     "ButtonUnlockWithPurchase": "Desbloquear com Compra",
-    "ButtonUnlockPrice": "Unlock {0}",
+    "ButtonUnlockPrice": "Desbloquear {0}",
     "MessageLiveTvGuideRequiresUnlock": "O Guia de TV ao Vivo est\u00e1 atualmente limitado a {0} canais. Clique no bot\u00e3o desbloquear para saber como aproveitar a experi\u00eancia completa.",
     "OptionEnableFullscreen": "Ativar Tela Cheia",
     "ButtonServer": "Servidor",
@@ -785,14 +785,14 @@
     "HeaderMedia": "M\u00eddia",
     "ButtonInbox": "Caixa de Entrada",
     "HeaderAdvanced": "Avan\u00e7ado",
-    "HeaderSaySomethingLike": "Say Something Like...",
-    "ButtonTryAgain": "Try Again",
-    "HeaderYouSaid": "You Said...",
-    "MessageWeDidntRecognizeCommand": "We're sorry, we didn't recognize that command.",
-    "MessageIfYouBlockedVoice": "If you denied voice access to the app you'll need to reconfigure before trying again.",
-    "MessageNoItemsFound": "No items found.",
-    "ButtonManageServer": "Manage Server",
-    "ButtonPreferences": "Preferences",
-    "ButtonViewArtist": "View artist",
-    "ButtonViewAlbum": "View album"
+    "HeaderSaySomethingLike": "Diga Alguma Coisa Como...",
+    "ButtonTryAgain": "Tente Novamente",
+    "HeaderYouSaid": "Voc\u00ea Disse...",
+    "MessageWeDidntRecognizeCommand": "Desculpe, n\u00e3o reconhecemos este comando.",
+    "MessageIfYouBlockedVoice": "Se voc\u00ea negou o acesso de voz \u00e0 app, voc\u00ea necessitar\u00e1 reconfigurar antes de tentar novamente.",
+    "MessageNoItemsFound": "Nenhum item encontrado.",
+    "ButtonManageServer": "Gerenciar Servidor",
+    "ButtonPreferences": "Prefer\u00eancias",
+    "ButtonViewArtist": "Ver artista",
+    "ButtonViewAlbum": "Ver \u00e1lbum"
 }
