--- a/MediaBrowser.Server.Implementations/Localization/Server/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nl.json
@@ -85,7 +85,7 @@
     "ButtonDonateWithPayPal": "Doneer met PayPal",
     "OptionDetectArchiveFilesAsMedia": "Herken archief bestanden als media",
     "OptionDetectArchiveFilesAsMediaHelp": "Indien ingeschakeld zullen bestanden met .rar en .zip extensies herkend worden als media bestanden.",
-    "LabelEnterConnectUserName": "Username or email:",
+    "LabelEnterConnectUserName": "Gebruikersnaam of email:",
     "LabelEnterConnectUserNameHelp": "This is your Emby online account username or password.",
     "LabelEnableEnhancedMovies": "Verbeterde film displays inschakelen",
     "LabelEnableEnhancedMoviesHelp": "Wanneer ingeschakeld, zullen films worden weergegeven als mappen inclusief trailers, extra's, cast & crew en andere gerelateerde inhoud.",
@@ -379,7 +379,7 @@
     "HeaderPleaseSignIn": "Wachtwoord in geven",
     "LabelUser": "Gebruiker:",
     "LabelPassword": "Wachtwoord:",
-    "ButtonManualLogin": "Handmatige aanmelding:",
+    "ButtonManualLogin": "Handmatige Aanmelding",
     "PasswordLocalhostMessage": "Wachtwoorden zijn niet vereist bij het aanmelden van localhost.",
     "TabGuide": "Gids",
     "TabChannels": "Kanalen",
@@ -1414,7 +1414,7 @@
     "HeaderSelectDate": "Selecteer Datum",
     "HeaderViewStyles": "Bekijk stijlen",
     "LabelSelectViewStyles": "Schakel verbeterde presentatie in voor:",
-    "LabelSelectViewStylesHelp": "Bij inschakelen zullen overzichten met met categori\u00ebn zolas suggesties, recente, genres en meer getoond worden. Bij uitschakelen worden simpele mappen getoond.",
+    "LabelSelectViewStylesHelp": "Bij inschakelen zullen overzichten met met categorie\u00ebn zoals suggesties, recente, genres en meer getoond worden. Bij uitschakelen worden simpele mappen getoond.",
     "TabPhotos": "Foto's",
     "TabVideos": "Video's",
     "HeaderWelcomeToEmby": "Welkom bij Emby",
