--- a/MediaBrowser.Server.Implementations/Localization/Server/pt-PT.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt-PT.json
@@ -26,7 +26,7 @@
     "AWindowsServiceHasBeenInstalled": "Foi instalado um Servi\u00e7o do Windows.",
     "WindowsServiceIntro1": "O Servidor Emby \u00e9 normalmente executado como uma aplica\u00e7\u00e3o de ambiente de trabalho com um \u00edcone na barra de tarefas, mas se o preferir executar como um servi\u00e7o em segundo plano, pode ser iniciado no painel de controlo de servi\u00e7os do windows.",
     "WindowsServiceIntro2": "Por favor tome aten\u00e7\u00e3o que se estiver a usar o servi\u00e7o, este n\u00e3o pode estar a correr ao mesmo tempo que o \u00edcone na bandeja. Por isso, ter\u00e1 de sair da aplca\u00e7\u00e3o da bandeja para poder correr o servi\u00e7o. Note, ainda, que o servi\u00e7o necessita de privil\u00e9gios administrativos via Painel de Controlo. De momento, n\u00e3o \u00e9 poss\u00edvel utilizar a fun\u00e7\u00e3o de auto-actualiza\u00e7\u00e3o ao mesmo tempo que est\u00e1 em utiliza\u00e7\u00e3o o servi\u00e7o, por isso, novas vers\u00f5es necessitam de interac\u00e7\u00e3o manual.",
-    "WizardCompleted": "That's all we need for now. Emby has begun collecting information about your media library. Check out some of our apps, and then click <b>Finish<\/b> to view the <b>Server Dashboard<\/b>.",
+    "WizardCompleted": "\u00c9 tudo, de momento. O Emby come\u00e7ou a recolher informa\u00e7\u00f5es da sua biblioteca multim\u00e9dia. Confira algumas das nossas apps e de seguida clique <b>Terminar<\/b> para ver o <b>Painel Principal do Servidor<\/b>",
     "LabelConfigureSettings": "Configura\u00e7\u00f5es",
     "LabelEnableVideoImageExtraction": "Activar extrac\u00e7\u00e3o de imagens dos v\u00eddeos.",
     "VideoImageExtractionHelp": "Para os v\u00eddeos ainda sem imagens e que n\u00e3o se encontram imagens na internet. Esta funcionalidade vai acrescentar mais algum tempo na leitura inicial da biblioteca, mas resultar\u00e1 numa apresenta\u00e7\u00e3o melhorada,",
@@ -35,11 +35,11 @@
     "LabelEnableAutomaticPortMapping": "Activar mapeamento autom\u00e1tico de portas",
     "LabelEnableAutomaticPortMappingHelp": "UPnP permite configurar automaticamente o router, para um acesso remoto mais facilitado. Pode n\u00e3o suportar todos os modelos de routers.",
     "HeaderTermsOfService": "Termos de Servi\u00e7o do Emby",
-    "MessagePleaseAcceptTermsOfService": "Please accept the terms of service and privacy policy before continuing.",
-    "OptionIAcceptTermsOfService": "I accept the terms of service",
-    "ButtonPrivacyPolicy": "Privacy policy",
-    "ButtonTermsOfService": "Terms of Service",
-    "HeaderDeveloperOptions": "Developer Options",
+    "MessagePleaseAcceptTermsOfService": "Por favor, aceite os termos de servi\u00e7o e pol\u00edtica de privacidade antes de continuar.",
+    "OptionIAcceptTermsOfService": "Aceito os termos de servi\u00e7o",
+    "ButtonPrivacyPolicy": "Pol\u00edtica de privacidade",
+    "ButtonTermsOfService": "Termos de Servi\u00e7o",
+    "HeaderDeveloperOptions": "Op\u00e7\u00f5es do Programador",
     "OptionEnableWebClientResponseCache": "Enable web client response caching",
     "OptionDisableForDevelopmentHelp": "Configure these as needed for web client development purposes.",
     "OptionEnableWebClientResourceMinification": "Enable web client resource minification",
@@ -53,7 +53,7 @@
     "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
     "LabelPinCode": "Pin code:",
     "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
-    "HeaderSync": "Sync",
+    "HeaderSync": "Sincroniza\u00e7\u00e3o",
     "ButtonOk": "Ok",
     "ButtonCancel": "Cancelar",
     "ButtonExit": "Exit",
@@ -62,7 +62,7 @@
     "HeaderAudio": "Audio",
     "HeaderVideo": "Video",
     "HeaderPaths": "Paths",
-    "CategorySync": "Sync",
+    "CategorySync": "Sincroniza\u00e7\u00e3o",
     "TabPlaylist": "Playlist",
     "HeaderEasyPinCode": "Easy Pin Code",
     "HeaderGrownupsOnly": "Grown-ups Only!",
@@ -75,10 +75,10 @@
     "ButtonConfigurePinCode": "Configure pin code",
     "HeaderAdultsReadHere": "Adults Read Here!",
     "RegisterWithPayPal": "Register with PayPal",
-    "HeaderSyncRequiresSupporterMembership": "Sync Requires a Supporter Membership",
+    "HeaderSyncRequiresSupporterMembership": "A sincroniza\u00e7\u00e3o necessita de uma conta de Apoiante",
     "HeaderEnjoyDayTrial": "Enjoy a 14 Day Free Trial",
-    "LabelSyncTempPath": "Temporary file path:",
-    "LabelSyncTempPathHelp": "Specify a custom sync working folder. Converted media created during the sync process will be stored here.",
+    "LabelSyncTempPath": "Caminho de arquivo tempor\u00e1rio:",
+    "LabelSyncTempPathHelp": "Especifique uma pasta de trabalho para a sincroniza\u00e7\u00e3o personalizada. Multim\u00e9dia convertida, criada durante o processo de sincroniza\u00e7\u00e3o, ser\u00e1 aqui armazenada.",
     "LabelCustomCertificatePath": "Custom certificate path:",
     "LabelCustomCertificatePathHelp": "Supply your own ssl certificate .pfx file. If omitted, the server will create a self-signed certificate.",
     "TitleNotifications": "Notifications",
@@ -89,7 +89,7 @@
     "LabelEnterConnectUserNameHelp": "This is your Emby online account username or password.",
     "LabelEnableEnhancedMovies": "Enable enhanced movie displays",
     "LabelEnableEnhancedMoviesHelp": "When enabled, movies will be displayed as folders to include trailers, extras, cast & crew, and other related content.",
-    "HeaderSyncJobInfo": "Sync Job",
+    "HeaderSyncJobInfo": "Tarefa de Sincroniza\u00e7\u00e3o",
     "FolderTypeMixed": "Mixed content",
     "FolderTypeMovies": "Movies",
     "FolderTypeMusic": "Music",
@@ -169,12 +169,12 @@
     "MessageNothingHere": "Nada aqui.",
     "MessagePleaseEnsureInternetMetadata": "Certifique-se que a transfer\u00eancia de metadados da internet est\u00e1 activa.",
     "TabSuggested": "Sugest\u00f5es",
-    "TabSuggestions": "Suggestions",
+    "TabSuggestions": "Sugest\u00f5es",
     "TabLatest": "Mais recente",
     "TabUpcoming": "Pr\u00f3ximos",
     "TabShows": "S\u00e9ries",
     "TabEpisodes": "Epis\u00f3dios",
-    "TabGenres": "G\u00e9neros Art\u00edsticos",
+    "TabGenres": "G\u00e9neros",
     "TabPeople": "Pessoas",
     "TabNetworks": "Redes",
     "HeaderUsers": "Utilizadores",
@@ -233,7 +233,7 @@
     "ScheduledTasksTitle": "Tarefas Agendadas",
     "TabMyPlugins": "As minhas extens\u00f5es",
     "TabCatalog": "Cat\u00e1logo",
-    "TitlePlugins": "Plugins",
+    "TitlePlugins": "Extens\u00f5es",
     "HeaderAutomaticUpdates": "Atualiza\u00e7\u00f5es autom\u00e1ticas",
     "HeaderNowPlaying": "A reproduzir",
     "HeaderLatestAlbums": "\u00daltimos \u00c1lbuns",
@@ -621,7 +621,7 @@
     "HeaderRunningTasks": "Tarefas em Execu\u00e7\u00e3o",
     "HeaderActiveDevices": "Dispositivos Ativos",
     "HeaderPendingInstallations": "Instala\u00e7\u00f5es Pendentes",
-    "HeaderServerInformation": "Server Information",
+    "HeaderServerInformation": "Informa\u00e7\u00e3o do Servidor",
     "ButtonRestartNow": "Reiniciar Agora",
     "ButtonRestart": "Reiniciar",
     "ButtonShutdown": "Encerrar",
@@ -689,7 +689,7 @@
     "NotificationOptionNewLibraryContentMultiple": "Novo conte\u00fado adicionado (m\u00faltiplo)",
     "NotificationOptionCameraImageUploaded": "Camera image uploaded",
     "NotificationOptionUserLockedOut": "User locked out",
-    "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
+    "HeaderSendNotificationHelp": "Por padr\u00e3o, as notifica\u00e7\u00f5es s\u00e3o mostradas na caixa de entrada do painel principal. Explore o cat\u00e1logo das extens\u00f5es para instalar op\u00e7\u00f5es de notifica\u00e7\u00e3o adicionais.",
     "NotificationOptionServerRestartRequired": "\u00c9 necess\u00e1rio reiniciar o servidor",
     "LabelNotificationEnabled": "Ativar esta notifica\u00e7\u00e3o",
     "LabelMonitorUsers": "Monitor activity from:",
@@ -701,7 +701,7 @@
     "CategoryPlugin": "Extens\u00e3o",
     "LabelMessageTitle": "Titulo da mensagem:",
     "LabelAvailableTokens": "Tokens dispon\u00edveis:",
-    "AdditionalNotificationServices": "Browse the plugin catalog to install additional notification services.",
+    "AdditionalNotificationServices": "Explore o cat\u00e1logo de extens\u00f5es para instalar servi\u00e7os adicionais de notifica\u00e7\u00e3o.",
     "OptionAllUsers": "Todos os utilizadores",
     "OptionAdminUsers": "Administradores",
     "OptionCustomUsers": "Personalizado",
@@ -938,24 +938,24 @@
     "ViewTypeLiveTV": "Live TV",
     "ViewTypeLiveTvNowPlaying": "Now Airing",
     "ViewTypeLatestGames": "Latest Games",
-    "ViewTypeRecentlyPlayedGames": "Recently Played",
+    "ViewTypeRecentlyPlayedGames": "Reproduzido Recentemente",
     "ViewTypeGameFavorites": "Favorites",
     "ViewTypeGameSystems": "Game Systems",
     "ViewTypeGameGenres": "Genres",
     "ViewTypeTvResume": "Resume",
     "ViewTypeTvNextUp": "Next Up",
-    "ViewTypeTvLatest": "Latest",
+    "ViewTypeTvLatest": "\u00daltimas",
     "ViewTypeTvShowSeries": "Series",
     "ViewTypeTvGenres": "Genres",
     "ViewTypeTvFavoriteSeries": "Favorite Series",
     "ViewTypeTvFavoriteEpisodes": "Favorite Episodes",
     "ViewTypeMovieResume": "Resume",
-    "ViewTypeMovieLatest": "Latest",
+    "ViewTypeMovieLatest": "\u00daltimas",
     "ViewTypeMovieMovies": "Movies",
     "ViewTypeMovieCollections": "Collections",
     "ViewTypeMovieFavorites": "Favorites",
     "ViewTypeMovieGenres": "Genres",
-    "ViewTypeMusicLatest": "Latest",
+    "ViewTypeMusicLatest": "\u00daltimas",
     "ViewTypeMusicPlaylists": "Playlists",
     "ViewTypeMusicAlbums": "Albums",
     "ViewTypeMusicAlbumArtists": "Album Artists",
@@ -1008,7 +1008,7 @@
     "LabelMetadata": "Metadata:",
     "LabelImagesByName": "Images by name:",
     "LabelTranscodingTemporaryFiles": "Transcoding temporary files:",
-    "HeaderLatestMusic": "Latest Music",
+    "HeaderLatestMusic": "\u00daltimas M\u00fasicas",
     "HeaderBranding": "Branding",
     "HeaderApiKeys": "Api Keys",
     "HeaderApiKeysHelp": "External applications are required to have an Api key in order to communicate with Emby Server. Keys are issued by logging in with an Emby account, or by manually granting the application a key.",
@@ -1045,7 +1045,7 @@
     "TabScheduledTasks": "Scheduled Tasks",
     "HeaderChapters": "Cap\u00edtulos",
     "HeaderResumeSettings": "Resume Settings",
-    "TabSync": "Sync",
+    "TabSync": "Sincroniza\u00e7\u00e3o",
     "TitleUsers": "Users",
     "LabelProtocol": "Protocol:",
     "OptionProtocolHttp": "Http",
@@ -1135,7 +1135,7 @@
     "ProviderValue": "Provider: {0}",
     "LabelChannelDownloadSizeLimit": "Download size limit (GB):",
     "LabelChannelDownloadSizeLimitHelpText": "Limit the size of the channel download folder.",
-    "HeaderRecentActivity": "Recent Activity",
+    "HeaderRecentActivity": "Atividade Recente",
     "HeaderPeople": "People",
     "HeaderDownloadPeopleMetadataFor": "Download biography and images for:",
     "OptionComposers": "Composers",
@@ -1220,9 +1220,9 @@
     "HeaderDonationType": "Donation type:",
     "OptionMakeOneTimeDonation": "Make a separate donation",
     "OptionOneTimeDescription": "This is an additional donation to the team to show your support. It does not have any additional benefits and will not produce a supporter key.",
-    "OptionLifeTimeSupporterMembership": "Lifetime supporter membership",
-    "OptionYearlySupporterMembership": "Yearly supporter membership",
-    "OptionMonthlySupporterMembership": "Monthly supporter membership",
+    "OptionLifeTimeSupporterMembership": "Conta de Apoiante vital\u00edcia",
+    "OptionYearlySupporterMembership": "Conta de Apoiante anual",
+    "OptionMonthlySupporterMembership": "Conta de Apoiante mensal",
     "OptionNoTrailer": "No Trailer",
     "OptionNoThemeSong": "No Theme Song",
     "OptionNoThemeVideo": "No Theme Video",
@@ -1241,11 +1241,11 @@
     "HeaderPhotoInfo": "Photo Info",
     "HeaderInstall": "Install",
     "LabelSelectVersionToInstall": "Select version to install:",
-    "LinkSupporterMembership": "Learn about the Supporter Membership",
+    "LinkSupporterMembership": "Saiba mais sobre a conta de Apoiante",
     "MessageSupporterPluginRequiresMembership": "This plugin will require an active supporter membership after the 14 day free trial.",
     "MessagePremiumPluginRequiresMembership": "This plugin will require an active supporter membership in order to purchase after the 14 day free trial.",
     "HeaderReviews": "Reviews",
-    "HeaderDeveloperInfo": "Developer Info",
+    "HeaderDeveloperInfo": "Info do Programador",
     "HeaderRevisionHistory": "Revision History",
     "ButtonViewWebsite": "View website",
     "HeaderXmlSettings": "Xml Settings",
@@ -1336,7 +1336,7 @@
     "OptionEveryday": "Every day",
     "OptionWeekdays": "Weekdays",
     "OptionWeekends": "Weekends",
-    "MessageProfileInfoSynced": "User profile information synced with Emby Connect.",
+    "MessageProfileInfoSynced": "A informa\u00e7\u00e3o do perfil do utilizador foi sincronizada com o Emby Connect.",
     "HeaderOptionalLinkEmbyAccount": "Optional: Link your Emby account",
     "ButtonTrailerReel": "Trailer reel",
     "HeaderTrailerReel": "Trailer Reel",
@@ -1355,7 +1355,7 @@
     "HeaderDashboardUserPassword": "As senhas do utilizador s\u00e3o geridas dentro das prefer\u00eancias do seu perfil pessoal.",
     "HeaderLibraryAccess": "Library Access",
     "HeaderChannelAccess": "Channel Access",
-    "HeaderLatestItems": "Latest Items",
+    "HeaderLatestItems": "\u00daltimos Itens",
     "LabelSelectLastestItemsFolders": "Include media from the following sections in Latest Items",
     "HeaderShareMediaFolders": "Share Media Folders",
     "MessageGuestSharingPermissionsHelp": "Most features are initially unavailable to guests but can be enabled as needed.",
@@ -1375,14 +1375,14 @@
     "LabelEnableSingleImageInDidlLimit": "Limit to single embedded image",
     "LabelEnableSingleImageInDidlLimitHelp": "Some devices will not render properly if multiple images are embedded within Didl.",
     "TabActivity": "Activity",
-    "TitleSync": "Sync",
-    "OptionAllowSyncContent": "Allow Sync",
+    "TitleSync": "Sincronizar",
+    "OptionAllowSyncContent": "Permitir Sincroniza\u00e7\u00e3o",
     "OptionAllowContentDownloading": "Allow media downloading",
     "NameSeasonUnknown": "Season Unknown",
     "NameSeasonNumber": "Season {0}",
     "LabelNewUserNameHelp": "Usernames can contain letters (a-z), numbers (0-9), dashes (-), underscores (_), apostrophes ('), and periods (.)",
     "TabJobs": "Jobs",
-    "TabSyncJobs": "Sync Jobs",
+    "TabSyncJobs": "Tarefas de Sincroniza\u00e7\u00e3o",
     "LabelTagFilterMode": "Mode:",
     "LabelTagFilterAllowModeHelp": "If allowed tags are used as part of a deeply nested folder structure, content that is tagged will require parent folders to be tagged as well.",
     "HeaderThisUserIsCurrentlyDisabled": "This user is currently disabled",
@@ -1398,7 +1398,7 @@
     "OptionEnableTranscodingThrottle": "Enable throttling",
     "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback.",
     "LabelUploadSpeedLimit": "Upload speed limit (Mbps):",
-    "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
+    "OptionAllowSyncTranscoding": "Permitir sincroniza\u00e7\u00e3o que necessite de transcodifica\u00e7\u00e3o",
     "HeaderPlayback": "Media Playback",
     "OptionAllowAudioPlaybackTranscoding": "Allow audio playback that requires transcoding",
     "OptionAllowVideoPlaybackTranscoding": "Allow video playback that requires transcoding",
@@ -1439,5 +1439,5 @@
     "ButtonUnlockGuide": "Unlock Guide",
     "LabelEnableFullScreen": "Enable fullscreen mode",
     "LabelEnableChromecastAc3Passthrough": "Enable Chromecast AC3 Passthrough",
-    "LabelSyncPath": "Synced content path:"
+    "LabelSyncPath": "Caminho do conte\u00fado sincronizado:"
 }
