--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt-PT.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt-PT.json
@@ -36,11 +36,11 @@
     "MessageKeyUpdated": "Thank you. Your supporter key has been updated.",
     "MessageKeyRemoved": "Thank you. Your supporter key has been removed.",
     "HeaderSupportTheTeam": "Support the Emby Team",
-    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
+    "TextEnjoyBonusFeatures": "Desfrute dos Extras",
     "TitleLiveTV": "TV ao Vivo",
-    "TitleSync": "Sync",
+    "TitleSync": "Sincronizar",
     "ButtonDonate": "Donate",
-    "LabelRecurringDonationCanBeCancelledHelp": "Recurring donations can be cancelled at any time from within your PayPal account.",
+    "LabelRecurringDonationCanBeCancelledHelp": "Doa\u00e7\u00f5es recorrentes podem ser canceladas a qualquer momento dentro da sua conta do PayPal.",
     "HeaderMyMedia": "My Media",
     "TitleNotifications": "Notifications",
     "ErrorLaunchingChromecast": "There was an error launching chromecast. Please ensure your device is connected to your wireless network.",
@@ -56,7 +56,7 @@
     "PluginCategoryContentProvider": "Content Providers",
     "PluginCategoryScreenSaver": "Screen Savers",
     "PluginCategoryTheme": "Themes",
-    "PluginCategorySync": "Sync",
+    "PluginCategorySync": "Sincroniza\u00e7\u00e3o",
     "PluginCategorySocialIntegration": "Social Networks",
     "PluginCategoryNotifications": "Notifications",
     "PluginCategoryMetadata": "Metadata",
@@ -75,33 +75,33 @@
     "ButtonHelp": "Help",
     "ButtonSave": "Guardar",
     "ButtonDownload": "Download",
-    "SyncJobStatusQueued": "Queued",
-    "SyncJobStatusConverting": "Converting",
-    "SyncJobStatusFailed": "Failed",
-    "SyncJobStatusCancelled": "Cancelled",
-    "SyncJobStatusCompleted": "Synced",
-    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
-    "SyncJobStatusTransferring": "Transferring",
-    "SyncJobStatusCompletedWithError": "Synced with errors",
-    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
+    "SyncJobStatusQueued": "Em lista de espera",
+    "SyncJobStatusConverting": "A Converter",
+    "SyncJobStatusFailed": "Falhou",
+    "SyncJobStatusCancelled": "Cancelado",
+    "SyncJobStatusCompleted": "Sincronizado",
+    "SyncJobStatusReadyToTransfer": "Pronto para Transferir",
+    "SyncJobStatusTransferring": "A Transferir",
+    "SyncJobStatusCompletedWithError": "Sincronizado com erros",
+    "SyncJobItemStatusReadyToTransfer": "Pronto para Transferir",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Adicionar \u00e0 Cole\u00e7\u00e3o",
     "NewCollectionNameExample": "Exemplo: Cole\u00e7\u00e3o Guerra das Estrelas",
     "OptionSearchForInternetMetadata": "Procurar na internet por imagens e metadados",
-    "LabelSelectCollection": "Select collection:",
+    "LabelSelectCollection": "Selecione a cole\u00e7\u00e3o:",
     "HeaderDevices": "Devices",
     "ButtonScheduledTasks": "Scheduled tasks",
     "MessageItemsAdded": "Items added",
     "ButtonAddToCollection": "Add to collection",
     "HeaderSelectCertificatePath": "Select Certificate Path",
     "ConfirmMessageScheduledTaskButton": "This operation normally runs automatically as a scheduled task. It can also be run manually here. To configure the scheduled task, see:",
-    "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to sync, premium plugins, internet channel content, and more. {0}Learn more{1}.",
+    "HeaderSupporterBenefit": "Uma conta de Apoiante fornece benef\u00edcios adicionais como acesso \u00e0 sincroniza\u00e7\u00e3o, extens\u00f5es premium, conte\u00fados de canais da internet e mais. {0}Saiba mais{1}.",
     "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
     "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
     "HeaderWelcomeToProjectWebClient": "Welcome to Emby",
     "ButtonTakeTheTour": "Fa\u00e7a o tour",
     "HeaderWelcomeBack": "Welcome back!",
-    "TitlePlugins": "Plugins",
+    "TitlePlugins": "Extens\u00f5es",
     "ButtonTakeTheTourToSeeWhatsNew": "Fa\u00e7a o tour para ver as novidades",
     "MessageNoSyncJobsFound": "No sync jobs found. Create sync jobs using the Sync buttons found throughout the web interface.",
     "HeaderLibraryAccess": "Library Access",
@@ -112,7 +112,7 @@
     "ButtonQueueForRetry": "Queue for retry",
     "ButtonReenable": "Re-enable",
     "ButtonLearnMore": "Learn more",
-    "SyncJobItemStatusSyncedMarkForRemoval": "Marked for removal",
+    "SyncJobItemStatusSyncedMarkForRemoval": "Marcado para remo\u00e7\u00e3o",
     "LabelAbortedByServerShutdown": "(Aborted by server shutdown)",
     "LabelScheduledTaskLastRan": "Last ran {0}, taking {1}.",
     "HeaderDeleteTaskTrigger": "Delete Task Trigger",
@@ -234,7 +234,7 @@
     "LabelChapterDownloaders": "Chapter downloaders:",
     "LabelChapterDownloadersHelp": "Enable and rank your preferred chapter downloaders in order of priority. Lower priority downloaders will only be used to fill in missing information.",
     "HeaderFavoriteAlbums": "Favorite Albums",
-    "HeaderLatestChannelMedia": "Latest Channel Items",
+    "HeaderLatestChannelMedia": "\u00daltimos Itens de Canais",
     "ButtonOrganizeFile": "Organize File",
     "ButtonDeleteFile": "Delete File",
     "HeaderOrganizeFile": "Organize File",
@@ -269,7 +269,7 @@
     "LabelRemoteAccessUrl": "Remote access: {0}",
     "LabelRunningOnPort": "Running on http port {0}.",
     "LabelRunningOnPorts": "Running on http port {0}, and https port {1}.",
-    "HeaderLatestFromChannel": "Latest from {0}",
+    "HeaderLatestFromChannel": "Mais recentes de {0}",
     "LabelUnknownLanaguage": "Unknown language",
     "HeaderCurrentSubtitles": "Current Subtitles",
     "MessageDownloadQueued": "The download has been queued.",
@@ -733,7 +733,7 @@
     "SyncMedia": "Sync Media",
     "HeaderCancelSyncJob": "Cancel Sync",
     "CancelSyncJobConfirmation": "Cancelling the sync job will remove synced media from the device during the next sync process. Are you sure you wish to proceed?",
-    "TabSync": "Sync",
+    "TabSync": "Sincroniza\u00e7\u00e3o",
     "MessagePleaseSelectDeviceToSyncTo": "Please select a device to sync to.",
     "MessageSyncJobCreated": "Sync job created.",
     "LabelSyncTo": "Sync to:",
@@ -753,9 +753,9 @@
     "SyncJobItemStatusConverting": "Converting",
     "SyncJobItemStatusTransferring": "Transferring",
     "SyncJobItemStatusSynced": "Synced",
-    "SyncJobItemStatusFailed": "Failed",
-    "SyncJobItemStatusRemovedFromDevice": "Removed from device",
-    "SyncJobItemStatusCancelled": "Cancelled",
+    "SyncJobItemStatusFailed": "Falhou",
+    "SyncJobItemStatusRemovedFromDevice": "Removido do dispositivo",
+    "SyncJobItemStatusCancelled": "Cancelado",
     "LabelProfile": "Profile:",
     "LabelBitrateMbps": "Bitrate (Mbps):",
     "EmbyIntroDownloadMessage": "To download and install Emby Server visit {0}.",
