--- a/MediaBrowser.Server.Implementations/Localization/Server/pt-BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt-BR.json
@@ -85,8 +85,8 @@
     "ButtonDonateWithPayPal": "Doe atrav\u00e9s do PayPal",
     "OptionDetectArchiveFilesAsMedia": "Detectar arquivos compactados como m\u00eddia",
     "OptionDetectArchiveFilesAsMediaHelp": "Se ativado, arquivos com extens\u00f5es .rar e .zip ser\u00e3o detectados como arquivos de m\u00eddia.",
-    "LabelEnterConnectUserName": "Username or email:",
-    "LabelEnterConnectUserNameHelp": "This is your Emby online account username or password.",
+    "LabelEnterConnectUserName": "Nome de usu\u00e1rio ou e-mail:",
+    "LabelEnterConnectUserNameHelp": "Este \u00e9 o nome do usu\u00e1rio ou a senha da sua conta online do Emby.",
     "LabelEnableEnhancedMovies": "Ativar exibi\u00e7\u00f5es de filme avan\u00e7adas",
     "LabelEnableEnhancedMoviesHelp": "Quando ativado, os filmes ser\u00e3o exibidos como pastas para incluir trailers, extras, elenco & equipe e outros conte\u00fados relacionados.",
     "HeaderSyncJobInfo": "Tarefa de Sincroniza\u00e7\u00e3o",
@@ -595,7 +595,7 @@
     "OptionEnableEpisodeOrganization": "Ativar a organiza\u00e7\u00e3o de novos epis\u00f3dios",
     "LabelWatchFolder": "Pasta de Monitora\u00e7\u00e3o:",
     "LabelWatchFolderHelp": "O servidor ir\u00e1 pesquisar esta pasta durante a tarefa agendada 'Organizar novos arquivos de m\u00eddia'.",
-    "ButtonViewScheduledTasks": "Visualizar tarefas agendadas",
+    "ButtonViewScheduledTasks": "Ver tarefas agendadas",
     "LabelMinFileSizeForOrganize": "Tamanho m\u00ednimo de arquivo (MB):",
     "LabelMinFileSizeForOrganizeHelp": "Arquivos menores que este tamanho ser\u00e3o ignorados.",
     "LabelSeasonFolderPattern": "Padr\u00e3o da pasta de temporada:",
@@ -1393,8 +1393,8 @@
     "HeaderUpcomingSports": "Esportes Por Estrear",
     "HeaderUpcomingPrograms": "Programas Por Estrear",
     "ButtonMoreItems": "Mais...",
-    "LabelShowLibraryTileNames": "Mostrar os nomes das tiles da biblioteca",
-    "LabelShowLibraryTileNamesHelp": "Determina se os t\u00edtulos ser\u00e3o exibidos embaixo das tiles da biblioteca na p\u00e1gina in\u00edcio",
+    "LabelShowLibraryTileNames": "Mostrar os nomes dos mosaicos da biblioteca",
+    "LabelShowLibraryTileNamesHelp": "Determina se os t\u00edtulos ser\u00e3o exibidos embaixo dos mosaicos da biblioteca na p\u00e1gina in\u00edcio",
     "OptionEnableTranscodingThrottle": "Ativar controlador de fluxo",
     "OptionEnableTranscodingThrottleHelp": "O controlador de fluxo ajustar\u00e1 automaticamente a velocidade de transcodifica\u00e7\u00e3o para minimizar o uso da cpu no servidor durante a reprodu\u00e7\u00e3o.",
     "LabelUploadSpeedLimit": "Limite de velocidade de upload (Mbps):",
@@ -1437,7 +1437,7 @@
     "ButtonReset": "Redefinir",
     "OptionEnableExternalVideoPlayers": "Ativar reprodutores de v\u00eddeo externos",
     "ButtonUnlockGuide": "Desbloquear Guia",
-    "LabelEnableFullScreen": "Enable fullscreen mode",
-    "LabelEnableChromecastAc3Passthrough": "Enable Chromecast AC3 Passthrough",
-    "LabelSyncPath": "Synced content path:"
+    "LabelEnableFullScreen": "Ativar modo tela cheia",
+    "LabelEnableChromecastAc3Passthrough": "Ativar a assagem direta de AC3 para o Chromecast",
+    "LabelSyncPath": "Caminho do conte\u00fado sincronizado:"
 }
