--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -796,6 +796,7 @@
     "HeaderMedia": "Media",
     "ButtonInbox": "Inbox",
     "HeaderAdvanced": "Advanced",
+    "HeaderGroupVersions": "Group Versions",
     "HeaderSaySomethingLike": "Say Something Like...",
     "ButtonTryAgain": "Try Again",
     "HeaderYouSaid": "You Said...",
