--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -38,6 +38,7 @@
     "HeaderSupportTheTeam": "Support the Emby Team",
     "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
     "TitleLiveTV": "Live TV",
+    "ButtonCancelSyncJob":  "Cancel sync job",
     "TitleSync": "Sync",
     "HeaderSelectDate": "Select Date",
     "ButtonDonate": "Donate",
