fix recording button

--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -1458,5 +1458,6 @@
     "LabelEmail": "Email:",
     "LabelUsername": "Username:",
     "HeaderSignUp": "Sign Up",
-    "LabelPasswordConfirm": "Password (confirm):"
+    "LabelPasswordConfirm": "Password (confirm):",
+    "ButtonAddServer": "Add Server"
 }
