Reports - icons and people fix

--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -1459,5 +1459,10 @@
     "LabelUsername": "Username:",
     "HeaderSignUp": "Sign Up",
     "LabelPasswordConfirm": "Password (confirm):",
-    "ButtonAddServer": "Add Server"
+    "ButtonAddServer": "Add Server",
+    "HeaderOverview": "Overview",
+    "HeaderShortOverview": "Short Overview",
+    "HeaderType": "Type",
+    "HeaderSeverity": "Severity",
+    "OptionReportActivities": "Activities Log"
 }
