--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -313,6 +313,9 @@
     "OptionAllowRemoteControlOthers": "Allow remote control of other users",
     "OptionAllowRemoteSharedDevices": "Allow remote control of shared devices",
     "OptionAllowRemoteSharedDevicesHelp": "Dlna devices are considered shared until a user begins controlling it.",
+    "OptionAllowLinkSharing": "Allow social media sharing",
+    "OptionAllowLinkSharingHelp": "Only web pages containing media information are shared. Media files are never shared publicly. Shares are time-limited and will expire based on your server sharing settings.",
+    "HeaderSharing": "Sharing",
     "HeaderRemoteControl": "Remote Control",
     "OptionMissingTmdbId": "Missing Tmdb Id",
     "OptionIsHD": "HD",
