--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -813,6 +813,7 @@
     "ErrorMessageEmailInUse": "The email address is already in use. Please enter a new email address and try again, or use the forgot password feature.",
     "MessageThankYouForConnectSignUp": "Thank you for signing up for Emby Connect. An email will be sent to your address with instructions on how to confirm your new account. Please confirm the account and then return here to sign in.",
     "HeaderShare": "Share",
-    "ButtonShareHelp": "Only a web page containing media information will be shared. Media files are never shared publicly."
-
+    "ButtonShareHelp": "Share a web page containing media information with social media. Media files are never shared publicly.",
+    "ButtonShare": "Share",
+    "HeaderConfirm": "Confirm"
 }
