update selection buttons

--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -1467,5 +1467,6 @@
     "HeaderDisplay": "Display",
     "HeaderNavigation": "Navigation",
     "LegendTheseSettingsShared": "These settings are shared on all devices",
-    "OptionEnableAutomaticServerUpdates": "Enable automatic server updates"
+    "OptionEnableAutomaticServerUpdates": "Enable automatic server updates",
+    "OptionOtherTrailers": "Include trailers from older movies"
 }
