update metadata manager

--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -815,5 +815,6 @@
     "HeaderShare": "Share",
     "ButtonShareHelp": "Share a web page containing media information with social media. Media files are never shared publicly.",
     "ButtonShare": "Share",
-    "HeaderConfirm": "Confirm"
+    "HeaderConfirm": "Confirm",
+    "ButtonAdvancedRefresh": "Advanced Refresh"
 }
