--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -820,5 +820,8 @@
     "MessageConfirmDeleteTunerDevice": "Are you sure you wish to delete this device?",
     "MessageConfirmDeleteGuideProvider": "Are you sure you wish to delete this guide provider?",
     "HeaderDeleteProvider": "Delete Provider",
-    "HeaderAddProvider": "Add Provider"
+    "HeaderAddProvider": "Add Provider",
+    "ErrorAddingTunerDevice": "There was an error adding the tuner device. Please ensure it is accessible and try again.",
+    "ErrorSavingTvProvider": "There was an error saving the TV provider. Please ensure it is accessible and try again.",
+    "ErrorGettingTvLineups": "There was an error downloading tv lineups. Please ensure your username and password are correct and try again."
 }
