--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -345,7 +345,9 @@
     "ButtonSelectDirectory": "Select Directory",
     "LabelCustomPaths": "Specify custom paths where desired. Leave fields empty to use the defaults.",
     "LabelCachePath": "Cache path:",
-    "LabelCachePathHelp": "Specify a custom location for server cache files, such as images.",
+    "LabelCachePathHelp": "Specify a custom location for server cache files, such as images. Leave blank to use the server default.",
+    "LabelRecordingPath": "Recording path:",
+    "LabelRecordingPathHelp": "Specify a custom location to save recordings. Leave blank to use the server default.",
     "LabelImagesByNamePath": "Images by name path:",
     "LabelImagesByNamePathHelp": "Specify a custom location for downloaded actor, genre and studio images.",
     "LabelMetadataPath": "Metadata path:",
@@ -1486,5 +1488,6 @@
     "LabelZipCode": "Zip Code:",
     "GuideProviderListingsStep": "Step 2: Select Listings",
     "GuideProviderLoginStep": "Step 1: Login",
-    "LabelLineup": "Lineup"
+    "LabelLineup": "Lineup",
+    "MessageTunerDeviceNotListed": "Is your tuner device not listed? Try installing an external service plugin for more Live TV options."
 }
