--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -823,5 +823,6 @@
     "HeaderAddProvider": "Add Provider",
     "ErrorAddingTunerDevice": "There was an error adding the tuner device. Please ensure it is accessible and try again.",
     "ErrorSavingTvProvider": "There was an error saving the TV provider. Please ensure it is accessible and try again.",
-    "ErrorGettingTvLineups": "There was an error downloading tv lineups. Please ensure your username and password are correct and try again."
+    "ErrorGettingTvLineups": "There was an error downloading tv lineups. Please ensure your username and password are correct and try again.",
+    "MessageCreateAccountAt": "Create an account at {0}"
 }
