stub out xml tv class

--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -824,5 +824,6 @@
     "ErrorAddingTunerDevice": "There was an error adding the tuner device. Please ensure it is accessible and try again.",
     "ErrorSavingTvProvider": "There was an error saving the TV provider. Please ensure it is accessible and try again.",
     "ErrorGettingTvLineups": "There was an error downloading tv lineups. Please ensure your username and password are correct and try again.",
-    "MessageCreateAccountAt": "Create an account at {0}"
+    "MessageCreateAccountAt": "Create an account at {0}",
+    "ErrorPleaseSelectLineup": "Please select a lineup and try again. If no lineups are available, then please check that your username, password, and postal code is correct."
 }
