--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -1486,8 +1486,8 @@
     "HeaderGuideProviders": "Guide Providers",
     "AddGuideProviderHelp": "Add a source for TV Guide information",
     "LabelZipCode": "Zip Code:",
-    "GuideProviderListingsStep": "Step 2: Select Listings",
-    "GuideProviderLoginStep": "Step 1: Login",
+    "GuideProviderSelectListings": "Select Listings",
+    "GuideProviderLogin": "Login",
     "LabelLineup": "Lineup:",
     "MessageTunerDeviceNotListed": "Is your tuner device not listed? Try installing an external service provider for more Live TV options.",
     "LabelImportOnlyFavoriteChannels": "Restrict to channels marked as favorite",
